# syntx

./: .gitignore  Cargo.toml  README.md
doc/: syntx.aux  syntx.ent  syntx.fdb_latexmk  syntx.fls  syntx.tex
src/: lib.rs  main.rs  syntx.stx  test.sh
src/codegen/: codegen.rs  delimeted.rs  lexable.rs  syntx.rs  tokenset.rs
src/engine/: errors.rs  lexer.rs  normalize.rs  parser.rs  semantic_traits.rs  states.rs
src/langs/java/: delimiters.rs  import_resolution.rs  inference.rs  mod.rs  tokenset.rs
src/langs/syntx/: syntx_delimeted.rs  syntx_inference.rs  syntx_tokenset.rs
src/structures/: hash_tree.rs
src/tests/: c.rs  java.rs
src/tokens/: token_traits.rs
